[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "slcl"
version = "0.4.0"
description = "Python bindings for the SLCL Sui chain client"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "slcl._native"
manifest-path = "../crates/vramhub-chain/Cargo.toml"
