[package]
name = "vramhub-adapter"
version.workspace = true
edition.workspace = true

[features]
default = []
templar = []
intellect = []
# CPU-only Candle (works everywhere, no CUDA toolkit needed)
candle = ["dep:candle-core", "dep:candle-nn", "dep:tiktoken-rs", "dep:reqwest", "dep:serde_json"]
# CUDA backend — requires CUDA toolkit ≥ 11.8 + cuDNN installed
cuda = ["candle", "candle-core/cuda"]
# Apple Metal backend
metal = ["candle", "candle-core/metal"]
# Python sidecar — Rust miner talks to a local PyTorch process over HTTP
sidecar = ["dep:reqwest", "dep:serde_json"]

[dependencies]
vramhub-core = { path = "../vramhub-core" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
candle-core = { version = "0.8", optional = true }
candle-nn  = { version = "0.8", optional = true }
tiktoken-rs = { version = "0.5", optional = true }
reqwest    = { version = "0.12", features = ["json"], optional = true }
serde_json = { workspace = true, optional = true }
