[package]
name = "vramhub-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vramhub-cli"
path = "src/main.rs"

[dependencies]
vramhub-core = { path = "../vramhub-core" }
vramhub-chain = { path = "../vramhub-chain" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
hex = { workspace = true }
ciborium = { workspace = true }
